<resources>

    <string-array name="names">
        <item>person</item>
        <item>person1</item>
        <item>person2</item>
        <item>person3</item>

    </string-array>
    <string name="app_name">E-Prescription</string>
    <string name="email_id">Email-ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signin">Already have an account?Login here.</string>
    <string name="signup">New user? Sign up here</string>

    <string name="forgot_password">Forgot Password </string>
    <string name="reset">RESET</string>
    <string name="title_activity_home">home</string>
    <string name="name_xyz">Doctor:</string>
    <string name="patient_id_xyz">Patient:</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="medicine">Medicine</string>
    <string name="sym">Symptoms</string>
    <string name="sendmail">Send Mail</string>
    <string name="save">Save as PDF</string>
    <string name="scanqrcode">Scan Qr Code</string>
    <string name="login_preference">com.e_prescription_login_preference</string>
    <string name="login_status_preference">com.example.noteshub_login_status_preference</string>
    <string name="medicine1">Medicine</string>
    <string name="name">Name</string>
    <string name="degree">Degree</string>
    <string name="address">Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="sign_in">Sign-in</string>
    <string name="register">Sign-in</string>
    <string name="password_above_5_character">Password(length>5 )</string>
    <string name="sign_up">SIGN-UP</string>
    <string name="search_here">Search here</string>
    <string name="display_names_goes_here">Display names goes here</string>
    <string name="voicesearch">voicesearch</string>
    <string name="pharmacy">Pharmacy:</string>
    <string name="patient">Patient:</string>
    <string name="doctor">Doctor:</string>
    <string name="fn">FN</string>
    <string name="full_name_goes_here">Full name goes here</string>
    <string name="no_fo_days">No fo days</string>
    <string name="an">AN</string>
    <string name="night">Night</string>
    <string name="clear">clear</string>
    <string name="check_stock">Check Stock</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="no_of_days">No of Days</string>
    <string name="morning">Morning</string>
    <string name="after_noon">After Noon</string>
    <string name="medicines">Medicines</string>
</resources>
